k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-front
  labels:
    app: node-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-front
  template:
    metadata:
      labels:
        app: node-front
    spec:
      containers:
      - name: node-front
        image: <IMAGEN>
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: 64Mi
            cpu: 50m
          limits:
            memory: 128Mi
            cpu: 100m
