k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: node-front-svc
  labels:
    app: node-front
spec:
  type: ClusterIP
  selector:
    app: node-front
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
