k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: ulink.tssw.cl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: node-front-svc
                port:
                  number: 80
